[tool.poetry]
name = "py-text-2-audio"
version = "0.1.0"
description = ""
authors = ["Cristian Benavides <sairoko16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyPDF2 = "^3.0.1"
gTTS = "^2.5.1"
pyttsx3 = "^2.91"
py3-tts = "^3.5"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
